--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body {
     font-family: "Montserrat", sans-serif;
-    background-image:url("Assets/newsprinkle_background.jpg");
+    background-image:url("assets/newsprinkle_background.jpg");
     background-size: 100%;
     background-repeat: repeat;
-  }
+  }ß
   .wrapper {
     margin: 80px 20px 0px;
   }
